refactor: updated getCategoryConfigList